<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_round_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_navigation"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/saved_navigation"
        android:icon="@drawable/ic_round_bookmarks"
        android:title="@string/title_stack_over_flow"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_round_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />
</menu>