<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    android:label="@string/title_home"
    app:startDestination="@id/homeFragment">

    <action
        android:id="@+id/action_global_podcastSourceFragment"
        app:destination="@id/podcastSourceFragment" />

    <action
        android:id="@+id/action_global_newsDetailsFragment"
        app:destination="@id/newDetailsFragment" />

    <action
        android:id="@+id/action_global_home_fragment"
        app:destination="@id/homeFragment" />

    <action
        android:id="@+id/action_global_podcastListFragment"
        app:destination="@id/podcastListFragment" />

    <action
        android:id="@+id/action_global_podcastDetailsFragment"
        app:destination="@id/podcastDetailsFragment" />


    <action
        android:id="@+id/action_global_sourcesListFragment"
        app:destination="@id/sourcesListFragment" />

    <action
        android:id="@+id/action_global_podcastFragment"
        app:destination="@id/podcastFragment" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.life4.flowpod.features.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_newDetailsFragment"
            app:destination="@id/newDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment2"
        android:name="com.life4.core.features.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.life4.flowpod.features.settings.SettingsFragment"
        android:label="@string/title_settings">
        <action
            android:id="@+id/action_settingsFragment2_to_settingsFragment"
            app:destination="@id/settingsFragment2" />
        <action
            android:id="@+id/action_settingsFragment_to_sourceFragment"
            app:destination="@id/sourceFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_userSourcesFragment"
            app:destination="@id/userSourcesFragment" />
    </fragment>
    <fragment
        android:id="@+id/newDetailsFragment"
        android:name="com.life4.flowpod.features.newsdetails.NewsDetailsFragment"
        android:label="NewDetailsFragment">
        <argument
            android:name="news"
            app:argType="com.life4.flowpod.models.rss_.RssPaginationItem" />
    </fragment>

    <fragment
        android:id="@+id/sourceFragment"
        android:name="com.life4.flowpod.features.source.SourceFragment"
        android:label="@string/content_store">
        <action
            android:id="@+id/action_sourceFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/newsFlowFragment"
        android:name="com.life4.flowpod.features.flow.NewsFlowFragment"
        android:label="@string/flow">
        <action
            android:id="@+id/action_flowFragment_to_newDetailsFragment"
            app:destination="@id/newDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.life4.flowpod.features.search.SearchFragment"
        android:label="@string/search">
        <action
            android:id="@+id/action_searchFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_podcastFragment"
            app:destination="@id/podcastFragment" />
        <argument
            android:name="isPodcast"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.life4.flowpod.features.news.NewsFragment"
        android:label="@string/results">
        <argument
            android:name="siteUrl"
            app:argType="string" />
        <action
            android:id="@+id/action_newsFragment_to_newDetailsFragment"
            app:destination="@id/newDetailsFragment" />
        <argument
            android:name="rssResponse"
            app:argType="com.life4.flowpod.models.rss_.RssResponse" />
        <argument
            android:name="isPodcast"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/userSourcesFragment"
        android:name="com.life4.flowpod.features.usersources.UserSourcesFragment"
        android:label="@string/your_content_provider">
        <action
            android:id="@+id/action_userSourcesFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <fragment
        android:id="@+id/savedNewsFragment"
        android:name="com.life4.flowpod.features.saved.SavedNewsFragment"
        android:label="@string/saved_news"
        tools:layout="@layout/fragment_saved_news">
        <action
            android:id="@+id/action_savedNewsFragment_to_newDetailsFragment"
            app:destination="@id/newDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/sourcesListFragment"
        android:name="com.life4.flowpod.features.source.sourcesList.SourcesListFragment"
        android:label="SourcesListFragment">
        <argument
            android:name="sources"
            app:argType="com.life4.flowpod.models.source.RssFeedResponseItem[]" />
    </fragment>
    <fragment
        android:id="@+id/newsSourceFragment"
        android:name="com.life4.flowpod.features.source.newsSource.NewsSourceFragment"
        android:label="NewsSourceFragment">
        <action
            android:id="@+id/action_newsSourceFragment_to_sourcesListFragment"
            app:destination="@id/sourcesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/podcastFragment"
        android:name="com.life4.flowpod.features.podcast.PodcastFragment"
        android:label="PodcastFragment">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/podcastSourceFragment"
        android:name="com.life4.flowpod.features.source.podcastSource.PodcastSourceFragment"
        android:label="PodcastSourceFragment">
        <action
            android:id="@+id/action_podcastSourceFragment_to_podcastFragment"
            app:destination="@id/podcastFragment" />
    </fragment>
    <fragment
        android:id="@+id/podcastDetailsFragment"
        android:name="com.life4.flowpod.features.podcastdetails.PodcastDetailsFragment"
        android:label="PodcastDetailsFragment">
        <argument
            android:name="podcast"
            app:argType="com.life4.flowpod.models.rss_.RssPaginationItem" />
    </fragment>
    <fragment
        android:id="@+id/podcastListFragment"
        android:name="com.life4.flowpod.features.source.podcastSource.PodcastListFragment"
        android:label="PodcastListFragment">
        <argument
            android:name="category"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/savedFragment"
        android:name="com.life4.flowpod.features.saved.SavedFragment"
        android:label="SavedFragment" />
    <fragment
        android:id="@+id/savedPodcastFragment"
        android:name="com.life4.flowpod.features.saved.savedpodcast.SavedPodcastFragment"
        android:label="SavedPodcastFragment" />
    <fragment
        android:id="@+id/flowFragment"
        android:name="com.life4.flowpod.features.flow.FlowFragment"
        android:label="FlowFragment" />
    <fragment
        android:id="@+id/podcastFlowFragment"
        android:name="com.life4.flowpod.features.flow.PodcastFlowFragment"
        android:label="PodcastFlowFragment" />

</navigation>